--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 <style>
+@import url('https://fonts.googleapis.com/css?family=Ranga&display=swap')
+
 h1, h2, h3, h3, h4, h5, h6 {text-transform: uppercase}
+
 h1 {color: crimson}
-body {font-family: sans-serif;
+
+cite{font-family: 'Ranga', cursive}
+
+body {font-family: sans-serif;  
 background-image: url("bg.jpg");
-background-size: 1920px 1080px;
+background-size: 1920px 1080px
 }
 .text{margin: auto}
 </style>
